@@ -1,3 +1,7 @@
+2007-06-10	kaffeetisch
+
+	* GKeyFile.xs, t/g.t: Wrap g_key_file_load_from_dirs.
+
 2007-02-24	kaffeetisch
 
 	* MakeHelper.pm: Use BSD make syntax for the BLIB_DONE stuff on
